--- a/.github/workflows/compile-ahk.yml
+++ b/.github/workflows/compile-ahk.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Compile AHK Script
       run: |
-        "C:\ProgramData\choco\bin\AutoHotkey.exe" /in "dynamic XCS hotkey.ahk" /out "dynamic_XCS_LK_hotkey.exe"
+        & "C:\ProgramData\choco\bin\AutoHotkey.exe" --% /in "dynamic XCS hotkey.ahk" /out "dynamic_XCS_hotkey.exe"
 
     - name: Upload Compiled EXE
       uses: actions/upload-artifact@v2
