--- a/.github/workflows/compile-ahk.yml
+++ b/.github/workflows/compile-ahk.yml
@@ -33,8 +33,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: exe
-        release_name: v1.${{ github.run_attempt}}
+        tag_name: v1.${{ github.run_id}}
+        release_name: v1.${{ github.run_id}}
         draft: false
         prerelease: false
 
@@ -47,4 +47,3 @@ jobs:
         asset_path: ./dynamic_XCS_hotkey.exe
         asset_name: dynamic_XCS_hotkey.exe
         asset_content_type: application/octet-stream
-        
